--- a/server/pages-manifest.json
+++ b/server/pages-manifest.json
@@ -1,8 +1,9 @@
 {
-  "/_error": "pages/_error.js",
-  "/_app": "pages/_app.js",
-  "/_document": "pages/_document.js",
   "/blog-post": "pages/blog-post.html",
+  "/_document": "pages/_document.js",
   "/api/hello": "pages/api/hello.js",
+  "/_app": "pages/_app.js",
+  "/_error": "pages/_error.js",
+  "/": "pages/index.html",
   "/404": "pages/404.html"
 }
